--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-csv
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: Researching Medieval Manuscripts at the Loyola Notre Dame Library
+title: Medieval Manuscripts at the Loyola Notre Dame Library
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: Images, Illustrations, & Illuminations from the LNDL Archives
 # description appears in meta tags and other locations
